; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_datapath.c_vport_hash_bucket.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_datapath.c_vport_hash_bucket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hlist_head = type { i32 }
%struct.datapath = type { %struct.hlist_head* }

@DP_VPORT_HASH_BUCKETS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hlist_head* (%struct.datapath*, i32)* @vport_hash_bucket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hlist_head* @vport_hash_bucket(%struct.datapath* %0, i32 %1) #0 {
  %3 = alloca %struct.datapath*, align 8
  %4 = alloca i32, align 4
  store %struct.datapath* %0, %struct.datapath** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.datapath*, %struct.datapath** %3, align 8
  %6 = getelementptr inbounds %struct.datapath, %struct.datapath* %5, i32 0, i32 0
  %7 = load %struct.hlist_head*, %struct.hlist_head** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @DP_VPORT_HASH_BUCKETS, align 4
  %10 = sub nsw i32 %9, 1
  %11 = and i32 %8, %10
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.hlist_head, %struct.hlist_head* %7, i64 %12
  ret %struct.hlist_head* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
